# bim_viewer_tutorial

./: CComponentQuantitiesDlg.cpp  CComponentQuantitiesDlg.h  CHPSApp.cpp  CHPSApp.h  CHPSComponentPropertiesPane.cpp  CHPSComponentPropertiesPane.h  CHPSConfigurationPane.cpp  CHPSDoc.cpp  CHPSDoc.h  CHPSFrame.cpp  CHPSFrame.h  CHPSModelBrowserPane.cpp  CHPSModelBrowserPane.h  CHPSPropertiesPane.cpp  CHPSPropertiesPane.h  CHPSSegmentBrowserPane.h  CHPSView.cpp  CHPSView.h  CMakeLists.txt  CProgressDialog.cpp  CommonProperty.cpp  CommonProperty.h  HExCrossSection.cpp  HExCrossSection.h  HExInterface.h  HPSExchangeProgressDialog.cpp  IFCMerge.h  IFCQuantity.cpp  IFCQuantity.h  IFCReportBuilder.cpp  IFCReportBuilder.h  IFCSampleApp.cpp  IFCSampleApp.h  IFCSampleModel.cpp  IFCSampleModel.h  IFCSamplePlanView.cpp  IFCSamplePlanView.h  IFCSamplePreview.cpp  IFCSamplePreview.h  IFCUtils.cpp  (+14 more)
res/: ribbon.mfcribbon-ms
